--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       id: hello
       uses: WeiYun0912/js-action@v1
       with:
-        who-to-greet: 'Wei'
+        sitemap: 'https://weiyun0912.github.io/Wei-Docusaurus/sitemap.xml'
     # Use the output from the `hello` step
     - name: Get the output time
       run: echo "The time was ${{ steps.hello.outputs.time }}"
