--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,25 @@
 name: "My Blog Outline"
 description: "Updates README.md with the recent blog outline"
 inputs:
+  GH_TOKEN:
+    description: "Github token"
+    default: ${{ github.token }}
+    required: false
+  COMMITTER_USERNAME:
+    description: "Commit username"
+    default: "blog-outline-bot"
+    required: false
+  COMMITTER_EMAIL:
+    description: :"Commit email"
+    default: "blog-outline-bot@exapmle.com"
+    required: false
   MAX_LINES:
-    description: "Max Lines"
+    description: "Maxium number of lines"
     default: "5"
+    required: false
+  COMMIT_MSG:
+    description: "Commit message"
+    default: "Update blog outline"
     required: false
 runs:
   using: 'node12'
