--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Updates Blog Outline
-      uses: WeiYun0912/js-action@v2.16
+      uses: WeiYun0912/js-action@v2.18
       with:
+        ref: ${{ github.ref_name }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COMMITTER_USERNAME : "WeiYun0912"
         COMMITTER_EMAIL : "yher25@gmail.com"
         MAX_LINES: '8'
