--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,13 @@ on: [push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    permissions:
+      contents: write
+    name: Updates Blog Outline
     steps:
     - uses: actions/checkout@v2
     - name: Updates Blog Outline
-      uses: WeiYun0912/js-action@v2.20
+      uses: WeiYun0912/js-action@v2.21
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COMMITTER_USERNAME : "WeiYun0912"
